name:                payback
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lambdax-x/payback#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Payback
                     , Payback.Types
                     , Payback.Parse
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , megaparsec
                     , hashable
                     , hashmap >= 1.3.2

executable payback
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , megaparsec >= 5.2.0
                     , payback